Fix and Add: Controllers e Domains