@@ -15,6 +15,7 @@ import java.util.stream.Collectors;
 
 @Service
 public class PedidoService {
+	
     private final PedidoRepository pedidoRepo;
     private final ClienteRepository clienteRepo;
     private final ProdutoRepository produtoRepo;
@@ -27,13 +28,17 @@ public class PedidoService {
 
     @Transactional
     public PedidoDTO criar(PedidoCriacaoDTO dto) {
-        Cliente cliente = clienteRepo.findById(dto.getClienteId()).orElseThrow(() -> new NotFoundException("Cliente não encontrado"));
+        Cliente cliente = clienteRepo.findById(dto.getClienteId())
+        		.orElseThrow(() -> new NotFoundException("Cliente não encontrado"));
+        
         Pedido pedido = new Pedido();
         pedido.setCliente(cliente);
         pedido.setStatus(StatusPedido.CRIADO);
 
         for (ItemPedidoCriacaoDTO itemDTO : dto.getItens()) {
-            Produto p = produtoRepo.findById(itemDTO.getProdutoId()).orElseThrow(() -> new NotFoundException("Produto não encontrado: " + itemDTO.getProdutoId()));
+            Produto p = produtoRepo.findById(itemDTO.getProdutoId())
+            		.orElseThrow(() -> new NotFoundException("Produto não encontrado: " + itemDTO.getProdutoId()));
+            
             ItemPedido item = new ItemPedido();
             item.setPedido(pedido);
             item.setProduto(p);
@@ -48,44 +53,73 @@ public class PedidoService {
     }
 
     public PedidoDTO buscarPorId(Long id) {
-        Pedido p = pedidoRepo.findById(id).orElseThrow(() -> new NotFoundException("Pedido não encontrado"));
+        Pedido p = pedidoRepo.findById(id)
+        		.orElseThrow(() -> new NotFoundException("Pedido não encontrado"));
         return toDto(p);
     }
 
     @Transactional
-    public PedidoDTO alterarStatus(Long id, String statusStr) {
-        Pedido p = pedidoRepo.findById(id).orElseThrow(() -> new NotFoundException("Pedido não encontrado"));
-        try {
-            p.setStatus(StatusPedido.valueOf(statusStr));
-        } catch (IllegalArgumentException e) {
-            throw new IllegalArgumentException("Status inválido");
+    public PedidoDTO atualizarPedido(Long id, PedidoCriacaoDTO dto) {
+        Pedido pedido = pedidoRepo.findById(id)
+                .orElseThrow(() -> new NotFoundException("Pedido não encontrado"));
+
+        Cliente cliente = clienteRepo.findById(dto.getClienteId())
+                .orElseThrow(() -> new NotFoundException("Cliente não encontrado"));
+        pedido.setCliente(cliente);
+
+        pedido.getItens().clear();
+        for (ItemPedidoCriacaoDTO itemDTO : dto.getItens()) {
+            Produto p = produtoRepo.findById(itemDTO.getProdutoId())
+                    .orElseThrow(() -> new NotFoundException("Produto não encontrado: " + itemDTO.getProdutoId()));
+
+            ItemPedido item = new ItemPedido();
+            item.setPedido(pedido);
+            item.setProduto(p);
+            item.setQuantidade(itemDTO.getQuantidade());
+            item.setValorVenda(p.getPreco());
+            item.setDesconto(itemDTO.getDesconto() == null ? BigDecimal.ZERO : itemDTO.getDesconto());
+            pedido.getItens().add(item);
         }
-        return toDto(p);
+
+        Pedido saved = pedidoRepo.save(pedido);
+        return toDto(saved);
     }
     
     public List<PedidoDTO> listarTodos() {
         return pedidoRepo.findAll()
             .stream()
-            .map(pedido -> new PedidoDTO())
-            .toList();
+            .map(this::toDto)
+            .collect(Collectors.toList());
+    }
+    
+    public void deletar(Long id) {
+        if (!pedidoRepo.existsById(id)) {
+            throw new NotFoundException("Pedido não encontrado");
+        }
+        pedidoRepo.deleteById(id);
     }
 
     private PedidoDTO toDto(Pedido p) {
         PedidoDTO dto = new PedidoDTO();
         dto.setId(p.getId());
-        dto.setClienteId(p.getCliente().getId());
-        dto.setStatus(p.getStatus());
-        dto.setDataCriacao(p.getDataCriacao());
-        dto.setItens(p.getItens().stream().map(item -> {
+        dto.setClienteNome(p.getCliente().getNome());
+        dto.setStatus(p.getStatus().name());
+        dto.setDataCriacao(p.getDataCriacao()
+                            .format(java.time.format.DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm")));
+
+        List<ItemPedidoDTO> itensDto = p.getItens().stream().map(item -> {
             ItemPedidoDTO idto = new ItemPedidoDTO();
-            idto.setId(item.getId());
-            idto.setProdutoId(item.getProduto().getId());
             idto.setProdutoNome(item.getProduto().getNome());
             idto.setQuantidade(item.getQuantidade());
-            idto.setValorVenda(item.getValorVenda());
-            idto.setDesconto(item.getDesconto());
+            idto.setValorUnitario(item.getValorVenda());
+            idto.setDesconto(item.getDesconto() == null ? BigDecimal.ZERO : item.getDesconto());
+            idto.setSubtotal(item.getValorVenda()
+                              .multiply(new java.math.BigDecimal(item.getQuantidade()))
+                              .subtract(item.getDesconto() == null ? BigDecimal.ZERO : item.getDesconto()));
             return idto;
-        }).collect(Collectors.toList()));
+        }).collect(java.util.stream.Collectors.toList());
+
+        dto.setItens(itensDto);
         dto.setTotal(p.getTotal());
         return dto;
     }
